# pyta-finbenchmark

./: .env.example  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260401_0001_init_eval_tables.py  20260415_0002_add_pm_eval_cases.py  20260415_0003_add_pm_issues.py  20260415_0004_add_pm_ground_truths.py  20260415_0005_add_pm_scores.py  20260415_0006_add_pm_feedback.py  20260416_0007_add_uq_pm_feedback_case_issue.py
app/: config.py  main.py
app/api/routers/: cases.py  pm_cases.py  pm_feedback.py  pm_ground_truths.py  pm_issues.py  pm_webhook.py  scores.py  settings.py  webhook.py
app/jobs/: collect_gt.py  pm_detect.py  run_scoring.py
app/models/: __init__.py  app_setting.py  eval_case.py  ground_truth.py  pm_eval_case.py  pm_feedback.py  pm_ground_truth.py  pm_issue.py  pm_score.py  score.py
app/services/: judge_client_factory.py  judge_runtime.py  llm_judge.py  pm_feedback_generator.py  pm_rule_engine.py  pm_scorer.py  price_collector.py  runtime_settings.py  scorer.py
dashboard/: index.html
doc/claude/task/: 2026-04-01-bootstrap-replay-implementation.md  2026-04-02-bootstrap-replay-runbook.md  2026-04-02-ci-setup.md  2026-04-02-gt-and-scoring-run.md  (+6 more)
scripts/: e2e_integration.py  load_bootstrap_cases.py  replay_bootstrap_cases.py
tests/: test_cases_api.py  test_e2e_pipeline.py  test_judge_provider.py  test_pm_detect_api.py  test_pm_feedback.py  test_pm_ground_truths_api.py  test_pm_rule_engine.py  test_pm_scorer.py  test_pm_webhook.py  test_price_collector.py  test_settings_api.py
