[tool.poetry]
name = "pyta-eval"
version = "0.1.0"
description = "PYTA Evaluation Service — sandbox output quality assessment"
authors = ["kai sky"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
SQLAlchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.0.0"
pydantic-settings = "^2.6.1"
httpx = "^0.28.0"
anthropic = "^0.40.0"
akshare = "^1.14.0"
yfinance = "^0.2.54"
APScheduler = "^3.10.4"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.0"
ruff = "^0.15.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "llm: tests that require LLM API calls (skipped in PR CI)",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
